--- a/index.Rmd
+++ b/index.Rmd
@@ -17,5 +17,13 @@ Let's link to useful tools for data science.
 * [Google](https://www.google.com)
 * [p8105](https://www.p8105.com)
 
+## Local image
 
+Here's my hike in vermont.
+
+![](images/vermont.jpeg)
+
+## Link to page within the site
+
+[About me](about.html)
 
