--- a/index.Rmd
+++ b/index.Rmd
@@ -6,10 +6,10 @@ output:
     toc_float: true
 ---
 
-# This is Jeff's awesome website
+# This is Brennan's awesome website
 
 ![](https://media.giphy.com/media/drXGoW1iudhKw/giphy.gif)
-## Links
+
 
 Let's link to useful tools for data science.
 
@@ -20,7 +20,12 @@ Let's link to useful tools for data science.
 
 Here's my hike in vermont.
 
-![](images/vermont.jpeg)
+<img src="images/vermont.jpeg" style="width:75%">
+
+## Second picture
+
+![](images/wedding.jpeg)
+
 
 ## Link to page within the site
 
