--- a/plotly.Rmd
+++ b/plotly.Rmd
@@ -76,3 +76,14 @@ nyc_airbnb_df %>%
           type = "bar", colors = "viridis")
 ```
 
+## GGplotly
+
+```{r}
+ggp_scatter = 
+  nyc_airbnb_df %>% 
+  ggplot(aes(x = lat, y = long, color = price)) + 
+  geom_point()
+
+ggplotly(ggp_scatter)
+```
+
